--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
 html,body{
     height: 100%;
+    font-family: 'Poppins', sans-serif;
+
 }
 
 .main-div{
     height: 100%;
-    border-top-width: 1px;
-    border-left-width: 1px;
-    border-right-width: 1px;
-    border-bottom-width: 0px;
+    border: 0%;
     border-color: black;
-    border-style: solid;
+    border-style: none;
 }
 
 ul {
